deps/v8/test/message/fail/iterator-non-callable-2.out
*%(basename)s:7: TypeError: %%TypedArray%%.from requires that the property of the first argument, items[Symbol.iterator], when exists, be a function
Uint8Array.from(x);
           ^
TypeError: %%TypedArray%%.from requires that the property of the first argument, items[Symbol.iterator], when exists, be a function
    at Uint8Array.from (<anonymous>)
    at *%(basename)s:7:12
